//
// Copyright 2017-2022 Plexus Interop Deutsche Bank AG
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package interop;

message ApplicationOptions {
	optional string title = 1;
	optional ApplicationLaunchOnCallMode launch_on_call = 2;

	extensions 1000 to max;
}

message ProvidedServiceOptions {
	optional string title = 1;
	optional ApplicationLaunchOnCallMode launch_on_call = 2;

	extensions 1000 to max;
}

message ConsumedServiceOptions {
	extensions 1000 to max;
}

message ProvidedMethodOptions {
	optional string title = 1;
	optional ApplicationLaunchOnCallMode launch_on_call = 2;
	optional uint32 timeout_ms = 3;

	extensions 1000 to max;
}

message ConsumedMethodOptions {

	extensions 1000 to max;
}

enum ApplicationLaunchOnCallMode {
	option allow_alias = true;
	IF_NOT_LAUNCHED = 0;
	DEFAULT = 0;
	ALWAYS = 1;
	ENABLED = 1;
	NEVER = 2;
	DISABLED = 2;
}